force-app/main/default/objects/Application_Log__c/Application_Log__c.object-meta.xml
<CustomObject>
    <description>This object is used to persist log messages for future reference.</description>
    <label>Application Log</label>
    <nameField>
        <displayFormat>LOG-{0000000000}</displayFormat>
        <label>Application Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>