force-app/main/default/objects/Application_Log__c/fields/Send_Email_To_Support__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_To_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email To Support</label>
    <type>Checkbox</type>
</CustomField>