force-app/main/default/objects/Application_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>The originating class (e.g. CustomerManagement)</description>
    <inlineHelpText>The originating class (e.g. CustomerManagement)</inlineHelpText>
    <label>Source</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>