force-app/main/default/objects/Application_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Source_Function__c</columns>
    <columns>Log_Code__c</columns>
    <columns>Debug_Level__c</columns>
    <columns>Age__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Age__c</field>
        <operation>lessOrEqual</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>