force-app/main/default/objects/Application_Log__c/listViews/Application_Errors.listView-meta.xml
<ListView>
    <fullName>Application_Errors</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Source_Function__c</columns>
    <columns>Log_Code__c</columns>
    <columns>Debug_Level__c</columns>
    <columns>Age__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Age__c</field>
        <operation>lessOrEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Debug_Level__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>Errors</label>
</ListView>