force-app/main/default/objects/Application_Log__c/listViews/SNSW_Holding_Application_Log.listView-meta.xml
<ListView>
    <fullName>SNSW_Holding_Application_Log</fullName>
    <filterScope>Queue</filterScope>
    <label>SNSW Holding</label>
    <queue>SNSW_Holding</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>